<resources>

    <!--测试用-->
    <string name="login_out">退出登录</string>
    <string name="clear_all">清空数据</string>
    <string name="print_user">输出用户信息</string>

    <!--app专有名词-->
    <string name="app_name">爱呀</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>
    <string name="community_title">社区</string>
    <string name="message_title_default">消息</string>
    <string name="message_title_hit">被撩请求</string>
    <string name="love_unmatched_title">尚未匹配</string>
    <string name="love_matched_title">恋爱记</string>
    <string name="me_title">我</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="yes">确认</string>
    <string name="hit_on">撩Ta</string>
    <string name="send_gift">送Ta礼物</string>
    <string name="fill_form">填写个人信息</string>
    <string name="necessary_info">必填信息</string>
    <string name="unnecessary_info">选填信息</string>
    <string name="upload_picture">上传图片</string>
    <string name="fill_phone_number">请输入手机号</string>
    <!--常见名词-->
    <string name="sex">性别</string>
    <string name="height">身高</string>
    <string name="height_unit">(单位:cm)</string>
    <string name="age">年龄</string>
    <string name="school">学校</string>
    <string name="major">专业</string>
    <string name="school_major">学校专业</string>
    <string name="character">性格</string>
    <string name="constellation">星座</string>
    <string name="hobby">爱好</string>
    <string name="date">日期</string>
    <string name="edit">编辑</string>
    <string name="nick">昵称</string>
    <string name="get_verification">获取验证码</string>
    <string name="finish">完成</string>
    <!--默认内容-->
    <string name="default_username">李长歌</string>
    <string name="default_year">2017年</string>
    <string name="default_height_range">175–179</string>
    <string name="default_height">175</string>
    <string name="default_height_full">175cm</string>
    <string name="default_hobby">喜欢！雪❄真实的魔法</string>
    <string name="default_age">20</string>
    <string name="default_age_full">20岁</string>
    <string name="default_school">西安电子…</string>
    <string name="default_school_full">西安电子科技大学</string>
    <string name="default_character">活跃</string>
    <string name="default_constellation">天秤座</string>
    <string name="default_mission_date">选择任务日期</string>
    <string name="default_mission">输入任务名称或点击推荐的任务</string>
    <string name="default_price_height">X5</string>
    <string name="default_price_age">X4</string>
    <string name="default_price_school">X2</string>
    <string name="default_price_character">X2</string>
    <string name="default_price_constellation">X1</string>
    <!--特殊内容-->
    <string name="form_warn">确认后不可更改</string>
    <string name="start">开始</string>
    <string name="start_condition_match">开始条件匹配</string>
    <string name="shield_contact">屏蔽手机通讯录好友</string>
    <string name="love_unmatched_warn_point">本周剩余3次免积分配对成功机会</string>
    <string name="love_match_at_random">随缘匹配</string>
    <string name="random_match_switch_warn">随缘匹配开关，关闭后将不会被随缘匹配到</string>
    <string name="start_random_match">开始随缘匹配</string>
    <string name="random_match_instant_warn">发起后将立即与一名异性随缘成为七天情侣</string>
    <string name="match_result_title">查找结果</string>
    <string name="have_a_change">换一换</string>
    <string name="title_hit_it_off">匹配成功</string>
    <string name="subtitle_hit_it_off">你已经成功脱单啦！</string>
    <string name="today_mission">今日任务</string>
    <string name="tomorrow_mission">明日任务</string>
    <string name="new_mission">新建任务</string>
    <string name="mission">任务</string>
    <string name="recommend_mission">推荐任务</string>
    <string name="new_invite">发出邀请</string>
    <string name="browse_ta_activity">看Ta动态</string>
    <string name="mission_picture">任务图册</string>
    <string name="single_warn">你当前还是单身状态，快去和你的Ta相遇吧！</string>
    <string name="filter_condition">筛选条件</string>
    <string name="DIY_ta_0">给你</string>
    <string name="DIY_ta_1">X7快去DIY一个七天的Ta吧!</string>
    <string name="intimacy">亲密度</string>
    <string name="intimacy_detail">亲密度明细</string>
    <string name="intimacy_play">玩法</string>
    <string name="intimacy_rules_title">亲密度规则</string>
    <string name="intimacy_rule0">匹配成功后，初始亲密度为50</string>
    <string name="intimacy_rules_sub_title">达成每日标准，获得亲密度加成</string>
    <string name="intimacy_rule1">发送消息</string>
    <string name="intimacy_rule1_1">≥15条+2</string>
    <string name="intimacy_rule1_2">≥40条+4</string>
    <string name="intimacy_rule2">送礼物&#12288;</string>
    <string name="intimacy_rule2_1">≥1次&#160;&#160;+3</string>
    <string name="intimacy_rule2_2">≥3次&#160;&#160;+6</string>
    <string name="intimacy_rule3">完成任务</string>
    <string name="intimacy_rule3_1">≥2次&#160;&#160;+3</string>
    <string name="intimacy_rule3_2">≥5次&#160;&#160;+6</string>
    <string name="sign_code_warn">验证码已发送至18888888888，60s后可再次发送</string>
    <string name="sign_warn">注册即表示同意《爱呀用户协议》</string>
    <string name="oppositeID">对方ID</string>
    <string name="btn_text_send">发送</string>
    <string name="go_matched">去互动</string>
    <string name="save_picture">保存图片</string>
    <string name="save_picture_failed">保存失败</string>
    <string name="save_picture_success">图片成功保存至%s目录</string>
    <string name="version">爱呀 V1.0.0</string>
    <string name="title_activity_copyright">CopyrightActivity</string>
    <string name="copyright">一、总则 用户在使用爱呀的服务之前，应当仔细阅读本协议，并同意遵守本协议后方可成为爱呀用户，一旦用户注册成功，则用户与爱呀之间自动形成协议关系，用户应当受本协议的约束。\n
        二、服务内容 爱呀服务的具体内容由爱呀根据实际情况提供，例如好友推荐、信息流推荐等。除非本使用协议另有其它明确规定，增加或强化目前本服务的任何新功能，包括所推出的新产品，均受到本使用协议之规范。您了解并同意，本服务仅依其当前所呈现的状况提供，对于任何用户信息或个人化设定之时效、删除、传递错误、未予储存或其它任何问题，爱呀均不承担任何责任。爱呀保留不经事先通知为维修保养、升级或其它目的暂停本服务任何部分的权利。\n
        三、遵守法律 您同意遵守中华人民共和国相关法律法规的所有规定，并对以任何方式使用您的密码和您的账号使用本服务的任何行为及其结果承担全部责任。如您的行为违反国家法律和法规的任何规定，有可能构成犯罪的，将被追究刑事责任，并由您承担全部法律责任。如果爱呀有理由认为您的任何行为，包括但不限于您的任何言论和其它行为违反或可能违反国家法律和法规的任何规定，爱呀可在任何时候不经任何事先通知终止向您提供服务。\n
        四、您的注册义务 为了能使用本服务，您同意以下事项：依本服务注册提示填写正确的手机号码和密码。若您提供任何违法、不道德或爱呀认为不适合在爱呀上展示的资料；爱呀有理由怀疑你的资料属于程序或恶意操作，爱呀有权暂停或终止您的账号，并拒绝您于现在和未来使用本服务之全部或任何部分。爱呀无须对任何用户的任何登记资料承担任何责任，包括但不限于鉴别、核实任何登记资料的真实性、正确性、完整性、适用性及是否为最新资料的责任。\n
        五、隐私保护 爱呀不对外公开或向第三方提供单个用户的注册资料及用户在使用网络服务时存储在本网站的非公开内容，但下列情况除外： （1）事先获得用户的明确授权； （2）根据有关的法律法规要求； （3）按照相关政府主管部门的要求； （4）该第三方同意承担与爱呀同等的保护用户隐私的责任； 在不透露单个用户隐私资料的前提下，爱呀有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。 六、附则 本协议的订立、执行和解释及争议的解决均应适用中华人民共和国法律。 如本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，本协议的其余条款仍应有效并且有约束力。</string>
</resources>
