<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPureWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingEnd="@dimen/common_margin_15"
            android:paddingStart="@dimen/common_margin_15"
            android:text="@string/back"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/love_match_at_random"
            android:textColor="@color/colorTitle"
            android:textSize="15sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_random_warn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:includeFontPadding="false"
            android:text="@string/random_match_switch_warn"
            android:textColor="@color/colorContentSecondary"
            android:textSize="13sp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_fate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_random_warn"
            android:layout_alignParentEnd="true"
            android:paddingEnd="@dimen/common_margin_15"
            android:paddingStart="@dimen/common_margin_15"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@mipmap/fate_bg"/>

    <Button
        android:id="@+id/btn_start_fate_match"
        android:layout_width="@dimen/common_button_width"
        android:layout_height="@dimen/common_button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_selector_with_corner_18"
        android:text="@string/start_random_match"
        android:textColor="@color/colorPureWhite"
        android:textSize="@dimen/common_text_size_16"/>

    <TextView
        android:id="@+id/tv_love_match_at_random_warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_margin_15"
        android:includeFontPadding="false"
        android:text="@string/random_match_instant_warn"
        android:textColor="@color/colorContentMain"
        android:textSize="13sp"/>

</LinearLayout>
