<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/colorPureWhite">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingEnd="@dimen/common_margin_15"
            android:paddingStart="@dimen/common_margin_15"
            android:text="@string/back"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/common_text_size_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/match_result_title"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/common_text_size_16"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_result_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_margin_30"
        android:layout_marginStart="@dimen/common_margin_30"
        android:layout_marginTop="@dimen/common_margin_15"
        android:background="@drawable/card_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin_15"
            android:layout_marginTop="@dimen/common_margin_15"
            android:includeFontPadding="false"
            android:text="@string/default_username"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/common_text_size_16"/>

        <TextView
            android:id="@+id/tv_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin_15"
            android:layout_marginStart="@dimen/common_margin_15"
            android:layout_marginTop="@dimen/common_margin_15"
            android:includeFontPadding="false"
            android:text="@string/default_school_full"
            android:textColor="@color/colorContentMain"
            android:textSize="13sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/btn_have_a_change"
            android:layout_width="180dp"
            android:layout_height="36dp"
            android:background="@drawable/button_selector_with_corner_18"
            android:text="@string/have_a_change"
            android:textColor="@color/colorPureWhite"
            android:textSize="@dimen/common_text_size_16"/>

    </LinearLayout>

</LinearLayout>